2005-01-27  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_rebuild.at: Add priority tag.
	
	* tests/t_cvsimport.at: Be more thorough.

	* rcs_import.cc (store_edge): Rename to...
	(store_manifest_edge): ...this.  Remove revision arguments, and
	remove storing of revision.
	(import_states_recursive): Update accordingly.
	Add 'revisions' argument; update it instead of trying to write
	revisions now.
	(import_states_by_branch): Add 'revisions' argument.
	(import_cvs_repo): Add a stage 3 that writes out the revisions
	accumulated in the 'revisions' vector.
	
2005-01-27  graydon hoare  <graydon@pobox.com>

	* AUTHORS: Mention Georg.
	* change_set.cc: Null out names which are in null directories.
	* commands.cc (reindex): Remove COLLECTION argument.
	* database.{cc,hh} (get_revision_certs): 
	Add brute force "load all certs" method.
	* merkle_tree.{cc,hh}: Modify to use memory rather than disk.
	* netsync.{cc,hh}: Likewise.
	* packet.hh (manifest_edge_analyzer): Kill dead code.

2005-01-26  Nathaniel Smith  <njs@codesourcery.com>

	* mt_version.cc (print_full_version): Include system flavour.

2005-01-26  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_rebuild.at: New test.
	* testsuite.at: Add it.

2005-01-26  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_checkout_noop_on_fail.at: Clarify description and XFAIL.

	* tests/t_approval_semantics.at: New TODO.
	* tests/t_monotone_agent.at: New TODO.
	* testsuite.at: Add them.

2005-01-25  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_checkout_noop_on_fail.at: New test.
	* testsuite.at: Add it.
	(RAW_MONOTONE): Add $PREEXECUTE to definition.

2005-01-25  Nathaniel Smith  <njs@codesourcery.com>

	* change_set.cc (extend_renumbering_from_path_identities): Add
	invariant.
	(extend_renumbering_via_added_files): Likewise.

	* constants.hh (maxbytes, postsz): Remove dead constants.
	(verify_depth): New constant.
	* constants.cc: Likewise.
	* revision.hh (check_sane_history): New function.